# slinoss

./: .gitignore  AGENTS.md  README.md  manifest.scm  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: release-wheel.yml
docs/: decode.md
docs/benchmarks/: nextchar_decode_rtx3060.md
examples/: blocks_lm.py  nextchar.py
scripts/: bench_v2x2ssd.py  build_cute_aot.py  build_cute_forward_aot.py  guix-run
scripts/perf/: _common.py  _ncu_kernels.py  _nextchar.py  _nextchar_decode.py  _nextchar_model.py  _profiled_nextchar_model.py  _profiled_training_model.py  _training.py  _training_decode.py  _training_model.py  bench_decode.py  bench_mixer_step.py  bench_nextchar.py  bench_nextchar_decode.py  bench_training.py  bench_v2x2ssd.py  compare_perf.py  ncu_kernel_table.py  ncu_report.py  nsys_report.py  profile_cute_kernels.py  profile_cute_kernels.sh  profile_decode.py  profile_decode_nsys.sh  profile_nextchar.py  profile_nextchar_decode.py  profile_nextchar_memory.py  profile_scanprep_bwd.py  profile_scanprep_fwd.py  profile_training.py  profile_training_memory.py  profile_v2x2ssd.py  run_ncu_decode_report.sh  run_ncu_kernel_table.sh  (+1 more)
slinoss/: __init__.py  _cute_aot.py  _cute_runtime.py  _version.py  _wheel_aot.py
tests/: conftest.py  test_block_cute_aot.py  test_blocks.py  test_blocks_example.py  test_chunk_increment_bwd_cute.py  test_chunk_increment_cute.py  test_chunk_scan_bwd_db_cute.py  test_chunk_scan_bwd_dc_cute.py  test_chunk_scan_bwd_dlogprefix_cute.py  test_chunk_scan_bwd_du_cute.py  test_chunk_scan_bwd_dz0_cute.py  test_chunk_scan_bwd_param_cute.py  test_chunk_scan_bwd_stage_cute.py  test_cute_backend.py  test_cute_runtime.py  test_discretization.py  test_gate.py  test_mixer.py  test_mixer_cute_aot.py  test_mlp.py  test_ncu_report.py  test_nextchar.py  test_nextchar_decode.py  test_nsys_report.py  test_package.py  test_perf_budget.py  test_perf_compare.py  test_perf_memory.py  test_perf_ncu_kernels.py  test_perf_runtime.py  test_perf_schema.py  test_scanprep.py  test_scanprep_cute_aot.py  test_state_passing_bwd_cute.py  test_v2x2ssd_cute.py  test_v2x2ssd_cute_aot.py  test_v2x2ssd_cute_tuning.py  test_wheel_aot.py
(+118 files in other folders)
