[build-system]
requires = ["setuptools>=69", "wheel", "torch==2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slinoss"
version = "0.3.0"
description = "Selective linear oscillatory state-space models."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "torch==2.10.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
cuda = [
  "nvidia-cutlass-dsl==4.4.2",
  "cuda-python==12.9.4",
  "apache-tvm-ffi==0.1.9",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.9.5",
  "pyright>=1.1.400",
]

[tool.setuptools.packages.find]
include = ["slinoss*"]

[tool.setuptools.package-data]
"slinoss.ops.v2x2ssd.cute.aot" = [
  "manifest.json",
  "artifacts/*.json",
  "artifacts/*.so",
  "runtime/*.so",
]
